update card style

--- a/src/Product/Product.css
+++ b/src/Product/Product.css
@@ -1,7 +1,33 @@
 *{
     margin: 0;
-}
 
+}
+.card{
+    box-shadow: 0 4px 8px rgba(0, 0, 0, .2);
+    width: 300px;
+    height: auto;
+    text-align: center;
+    font-family: sans-serif;
+}
 .card img{
     width: 150px;
+}
+.price{
+    color: #666;
+    font-weight: 500;
+    font-size: 24px;
+    margin: 1.5rem 0;
+}
+button{
+    margin: 1rem .5rem;
+    border: none;
+    background-color: #fff;
+    font-size: 20px;
+    cursor: pointer;
+    padding: 1rem;
+    transition: .2s;
+    border-radius: 2rem;
+}
+button:hover{
+    background-color: #666;
 }
