--- a/src/Product/Product.css
+++ b/src/Product/Product.css
@@ -7,12 +7,13 @@
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     width: 400px;
     height: auto;
+    margin-top: 10rem;
     text-align: center;
     font-family: sans-serif;
-    margin: 2rem;
+    /* margin: 2rem; */
 }
 .card img{
-    width: 90%;
+    width: 20rem;
 }
 .price{
     color: #666;
