--- a/src/Product/Product.css
+++ b/src/Product/Product.css
@@ -7,7 +7,7 @@
     box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
     width: 400px;
     height: auto;
-    margin-top: 10rem;
+    margin-top: 2rem;
     text-align: center;
     font-family: sans-serif;
     /* margin: 2rem; */
@@ -47,4 +47,8 @@ button:hover{
         justify-content: center;
         align-items: center;
     }
+}
+.container h2{
+    text-align: center;
+    margin-top: 10rem;
 }
